[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/fonts/symbol_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/simulation/ui/SimulationControlUI.gd" type="Script" id=2]

[node name="SimulationControlUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 315.0
margin_right = 708.0
margin_bottom = 38.0
size_flags_horizontal = 4

[node name="ButtonStop" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "u"

[node name="ButtonNormal" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "P"

[node name="ButtonFast" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "F"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 393.0
margin_bottom = 38.0
size_flags_horizontal = 6
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 266.0
margin_bottom = 31.0
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer3/HBoxContainer"]
margin_right = 102.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer3/HBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = " Time:"

[node name="Time" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer3/HBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
max_length = 300
editable = false
placeholder_text = "time"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer3/HBoxContainer"]
margin_left = 106.0
margin_right = 259.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer3/HBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 91.0
margin_bottom = 19.0
text = ";  Generation: "

[node name="Generation" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer3/HBoxContainer/HBoxContainer2"]
margin_left = 95.0
margin_right = 153.0
margin_bottom = 24.0
editable = false
placeholder_text = "generation"

[node name="Expander" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 179.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 81.0
margin_bottom = 479.0
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 74.0
margin_bottom = 430.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 62.0
margin_bottom = 423.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 57.0
margin_bottom = 14.0
text = "Bots list:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 57.0
margin_bottom = 418.0
rect_min_size = Vector2( 0, 400 )
size_flags_vertical = 3

[node name="BotHolder" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 57.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/BotHolder"]
margin_right = 57.0
margin_bottom = 20.0

[node name="BotInfoContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 488.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 10

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/BotInfoContainer"]
margin_right = 155.0
margin_bottom = 112.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BotInfoContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 148.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer"]
margin_left = 43.0
margin_right = 97.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Bot info:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 141.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 79.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Energy: "

[node name="EnergyCount" type="LineEdit" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 141.0
margin_bottom = 24.0
editable = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 141.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 79.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Food eated: "

[node name="FoodEated" type="LineEdit" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 83.0
margin_right = 141.0
margin_bottom = 24.0
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 141.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 79.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Bots eated: "

[node name="BotsEated" type="LineEdit" parent="VBoxContainer/BotInfoContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 83.0
margin_right = 141.0
margin_bottom = 24.0
editable = false

[node name="Expander2" type="Control" parent="VBoxContainer/BotInfoContainer"]
visible = false
margin_left = 159.0
margin_right = 904.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/BotInfoContainer"]
margin_left = 908.0
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 112.0
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BotInfoContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 109.0
margin_bottom = 51.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BotInfoContainer/PanelContainer2/MarginContainer"]
margin_right = 102.0
margin_bottom = 44.0

[node name="Button" type="Button" parent="VBoxContainer/BotInfoContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_right = 102.0
margin_bottom = 20.0
text = "Save"

[node name="Button2" type="Button" parent="VBoxContainer/BotInfoContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 102.0
margin_bottom = 44.0
text = "Save to server"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonStop" to="." method="_on_ButtonStop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonNormal" to="." method="_on_ButtonNormal_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonFast" to="." method="_on_ButtonFast_pressed"]
